--- a/mgr/refs.bib
+++ b/mgr/refs.bib
@@ -1,3 +1,39 @@
+@misc{the_stack,
+  doi = {10.48550/ARXIV.2211.15533},
+  
+  url = {https://arxiv.org/abs/2211.15533},
+  
+  author = {Kocetkov, Denis and Li, Raymond and Allal, Loubna Ben and Li, Jia and Mou, Chenghao and Ferrandis, Carlos Muñoz and Jernite, Yacine and Mitchell, Margaret and Hughes, Sean and Wolf, Thomas and Bahdanau, Dzmitry and von Werra, Leandro and de Vries, Harm},
+  
+  keywords = {Computation and Language (cs.CL), Artificial Intelligence (cs.AI), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {The Stack: 3 TB of permissively licensed source code},
+  
+  publisher = {arXiv},
+  
+  year = {2022},
+  
+  copyright = {Creative Commons Attribution Share Alike 4.0 International}
+}
+
+@misc{bert_ranking,
+  doi = {10.48550/ARXIV.2010.06467},
+  
+  url = {https://arxiv.org/abs/2010.06467},
+  
+  author = {Lin, Jimmy and Nogueira, Rodrigo and Yates, Andrew},
+  
+  keywords = {Information Retrieval (cs.IR), Computation and Language (cs.CL), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {Pretrained Transformers for Text Ranking: BERT and Beyond},
+  
+  publisher = {arXiv},
+  
+  year = {2020},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
 @article{codex,
   author    = {Mark Chen and
                Jerry Tworek and
@@ -69,6 +105,43 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@misc{fastai,
+  title={fastai},
+  author={Howard, Jeremy and others},
+  year={2018},
+  publisher={GitHub},
+  howpublished={\url{https://github.com/fastai/fastai}},
+}
+
+@misc{ulmfit,
+  doi = {10.48550/ARXIV.1801.06146},
+  url = {https://arxiv.org/abs/1801.06146},
+  Author = {Howard, Jeremy and Ruder, Sebastian},
+  keywords = {Computation and Language (cs.CL), Machine Learning (cs.LG), Machine Learning (stat.ML), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  Title = {Universal Language Model Fine-tuning for Text Classification},
+  publisher = {arXiv},
+  year = {2018},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@misc{hetero_graphs,
+  doi = {10.48550/ARXIV.2011.14867},
+  
+  url = {https://arxiv.org/abs/2011.14867},
+  
+  author = {Wang, Xiao and Bo, Deyu and Shi, Chuan and Fan, Shaohua and Ye, Yanfang and Yu, Philip S.},
+  
+  keywords = {Social and Information Networks (cs.SI), Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {A Survey on Heterogeneous Graph Embedding: Methods, Techniques, Applications and Sources},
+  
+  publisher = {arXiv},
+  
+  year = {2020},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
 
 @misc{zsl_good_bad,
 Author = {Yongqin Xian and Bernt Schiele and Zeynep Akata},
@@ -104,6 +177,29 @@ Eprint = {arXiv:1703.04394},
     year = "2019",
     publisher = "Association for Computational Linguistics",
     url = "https://arxiv.org/abs/1908.10084",
+}
+
+@article{label_embedding,
+	doi = {10.1109/tpami.2015.2487986},
+  
+	url = {https://doi.org/10.1109%2Ftpami.2015.2487986},
+  
+	year = 2016,
+	month = {jul},
+  
+	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  
+	volume = {38},
+  
+	number = {7},
+  
+	pages = {1425--1438},
+  
+	author = {Zeynep Akata and Florent Perronnin and Zaid Harchaoui and Cordelia Schmid},
+  
+	title = {Label-Embedding for Image Classification},
+  
+	journal = {{IEEE} Transactions on Pattern Analysis and Machine Intelligence}
 }
 
 @article{gpl,
